my first commit

--- a/Assingment_module2_rahul.py.ipynb
+++ b/Assingment_module2_rahul.py.ipynb
@@ -317,6 +317,59 @@
    "id": "52bef348",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Write a Python function that takes a list of words and returns the length\n",
+    "# of the longest one.\n",
+    "\n",
+    "\n",
+    "def longest_one(word_list):\n",
+    "    word_len = []\n",
+    "    for i in word_list:\n",
+    "        word_len.append((len(i),(i)))\n",
+    "    word_len.sort()\n",
+    "    return word_len[-1] \n",
+    "v1 = longest_one([\"rahul\", \"prajapati\",\"ruchit\",\"sid\"])\n",
+    "print (\"The longest lenght string is:- \",v1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b4c660",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##  Write a Python function to reverses a string if its length is a multiple of 4\n",
+    "\n",
+    "def rev(a):\n",
+    "    if len(a)%4 == 0:\n",
+    "        print(a[-1::-1])\n",
+    "         \n",
+    "    else:\n",
+    "        print(a)\n",
+    "rev(\"rahul  prajapati\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "279ab0a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a Python function to insert a string in the middle of a string\n",
+    "\n",
+    "def insert_string(str1,str2):\n",
+    "    return str1[:2] + str2 + str1[2:]\n",
+    "print(insert_string(\"{()}\",\"python\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a65cb3ed",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
