--- a/Assingment_module2_rahul.py.ipynb
+++ b/Assingment_module2_rahul.py.ipynb
@@ -375,7 +375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -389,7 +389,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "df0893f56f349688326838aaeea0de204df53a132722cbd565e54b24a8fec5f6"
+   }
   }
  },
  "nbformat": 4,
