--- a/Assingment_module_3.ipynb
+++ b/Assingment_module_3.ipynb
@@ -685,19 +685,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "61a60611",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the key:- R\n",
-      "The key are presence:- ('R', 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##### How Do You Check The Presence Of A Key In A Dictionary?\n",
     "\n",
@@ -712,18 +703,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "45a57c13",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1: 3, 2: 4, 3: 5, 4: 6, 5: 7, 6: 8, 7: 9, 8: 10, 9: 11, 10: 12, 11: 13, 12: 14, 13: 15}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Write a Python script to print a dictionary where the keys are numbers\n",
     "# between 1 and 15.\n",
@@ -738,6 +721,496 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6a071b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Write a Python script to merge two Python dictionaries\n",
+    "\n",
+    "dict1 = {\"ravi\":34, \"kishan\":66, \"rahul\":23}\n",
+    "dict2 = {\"aniket\": 56, \"sunil\":99, \"sid\":33}\n",
+    "# merge = list(dict1.items()) \n",
+    "# merge1 = list(dict2.items())\n",
+    "# merge_list = merge + merge1\n",
+    "# print(dict(merge_list))\n",
+    "\n",
+    "#dict1.update(dict2)\n",
+    "# print(dict1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80d2a27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Write a Python program to map two lists into a dictionary\n",
+    "\n",
+    "list1 = [(\"mustang\"),(\"civic\"),(\"kia\")]\n",
+    "list2 = [(1994),(2001),(2012)]\n",
+    "x = dict(zip(list1,list2))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59ca98b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Write a Python program to map two lists into a dictionary\n",
+    "\n",
+    "list1 = [(\"mustang\"),(\"civic\"),(\"kia\")]\n",
+    "list2 = [(1994),(2001),(2012)]\n",
+    "x = dict(zip(list1,list2))\n",
+    "print(x)\n",
+    "# # Write a Python program to combine two dictionary adding values for common keys.\n",
+    "#  d1 = {'a': 100, 'b': 200, 'c':300}\n",
+    "#  d2 = {'a': 300, 'b': 200,’d’:400}\n",
+    "# Sample output: Counter ({'a': 400, 'b': 400,’d’: 400, 'c': 300}).\n",
+    "\n",
+    "d1 = {'a': 100, 'b': 200, 'c':300}\n",
+    "d2 = {'a': 300, 'b': 200, 'd':400}\n",
+    "for i in d1:\n",
+    "    if i in d2:\n",
+    "        d1[i] = d1[i] + d2[i]\n",
+    "    else:\n",
+    "        d1.update(i)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c42aa5f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Write a Python program to print all unique values in a dictionary.\n",
+    "\n",
+    "dict1 = {\"honda\":\"civic\",\"ford\":\"ecosport\",\"bmw\":\"x5\",\"volkswegan\":\"ecosport\"}\n",
+    "x = set(dict1.values())\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "971216ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###  Why Do You Use the Zip () Method in Python?\n",
+    "\n",
+    "# The zip() function returns a zip object, which is an iterator of tuples where the first item in each passed \n",
+    "# iterator is paired together, and then the second item in each passed iterator are paired together etc.\n",
+    "\n",
+    "\n",
+    "x = [1,2,3]\n",
+    "y = [\"one\",\"two\",\"three\",\"four\"]\n",
+    "r = list(zip(x,y))\n",
+    "print(r)\n",
+    "\n",
+    "### four has not zip \n",
+    "# If the passed iterators have different lengths, the iterator with the least items decides the length of the\n",
+    "# new iterator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede33e13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###  Write a Python program to create and display all combinations of letters,\n",
+    "# selecting each letter from a different key in a dictionary.\n",
+    "# Sample data: {'1': ['a','b'], '2': ['c','d']}\n",
+    "# Expected Output:\n",
+    "# ac ad bc bd\n",
+    "\n",
+    "dict1 = {1:['a','b'],2:['c','d']}\n",
+    "x = list(dict1.values())\n",
+    "\n",
+    "for i in x [0]:\n",
+    "    for r in x[1]:\n",
+    "        print(i+r)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea8a068e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###  Write a Python program to find the highest 3 values in a dictionary\n",
+    "\n",
+    "dict1 = {\"rahul\":34, \"anket\":57, \"ruchit\":87, \"pankaj\":55,\"sid\":99}\n",
+    "x = list(dict1.values())\n",
+    "y = x.sort()\n",
+    "print(f\"The highest 3 values in dict is:- {x[-1]},{x[-2]},{x[-3]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ebedccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###  Write a Python program to combine values in python list of dictionaries.\n",
+    "# Sample data: [{'item': 'item1', 'amount': 400}, {'item': 'item2', 'amount':\n",
+    "# 300},{'item': 'item1', 'amount': 750}]\n",
+    "\n",
+    "dict1=[{'item': 'item1', 'amount': 400}, {'item': 'item2', 'amount': 300}, {'item': 'item1', 'amount': 750}]    \n",
+    "dict2={}\n",
+    "for i in dict1:\n",
+    "    if i['item'] not in dict2:\n",
+    "        dict2[i['item']]=i['amount']\n",
+    "#print(dict2)\n",
+    "    else:\n",
+    "        dict2[i['item']]+=i['amount']\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e569fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###  Write a Python program to create a dictionary from a string.\n",
+    "# o Note: Track the count of the letters from the string. Sample string:\n",
+    "# 'w3resource'\n",
+    "# o Expected output: {'3': 1,’s’: 1, 'r': 2, 'u': 1, 'w': 1, 'c': 1, 'e': 2, 'o': 1}\n",
+    "\n",
+    "var = \"harish\"\n",
+    "var1 = []\n",
+    "var2 = []\n",
+    "\n",
+    "for i in var:\n",
+    "    var1 += i\n",
+    "\n",
+    "for j in var1:\n",
+    "    var2 += str(var1.count(j))\n",
+    "\n",
+    "new_dict = list(zip(var1,var2))\n",
+    "print(dict(new_dict))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20b11668",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Write a Python function to calculate the factorial of a number (a non-\n",
+    "# negative integer)\n",
+    "\n",
+    "def factorial(n):\n",
+    "    if n>1 or n == 0:\n",
+    "        return n * factorial(n -1)\n",
+    "    else :\n",
+    "        return n\n",
+    "factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbce17f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####  Write a Python function to check whether a number is in a given range\n",
+    "\n",
+    "\n",
+    "def num(n):\n",
+    "    if n in range(1,9):\n",
+    "        return f\"{n} is in given range\"\n",
+    "    else:\n",
+    "        print('no')\n",
+    "num(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db62894f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Write a Python function to check whether a number is perfect or not.\n",
+    "\n",
+    "n=int(input('enter the number:'))     # 6,28,4496,8128 :-perfect number\n",
+    "sum = 0                               \n",
+    "for x in range(1, n):\n",
+    "    if n % x == 0:\n",
+    "        sum += x\n",
+    "# print(sum)\n",
+    "if sum==n:\n",
+    "    print( n,'is perfect number')\n",
+    "else:\n",
+    "    print(n,'not perfect number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42bdfe2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###   Write a Python function that checks whether a passed string is palindrome or not\n",
+    "\n",
+    "def check_str(str1):\n",
+    "    var = []\n",
+    "    var1 = []\n",
+    "    for i in str1:\n",
+    "        var.append(i)\n",
+    "    for j in var[-1::-1]:\n",
+    "        var1.append(j)\n",
+    "    if var == var1:\n",
+    "        print(f\"The string {str1} is palingdrome\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"The string is not palingdrome\")\n",
+    "        \n",
+    "check_str(\"oppo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b06be130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##   What is lambda function in python? What we call a function which is incomplete version of a function?\n",
+    "\n",
+    "\n",
+    "# Lambda Function, also referred to as ‘Anonymous function’ is same as a regular python function but can be \n",
+    "# defined without a name.\n",
+    "# because they are handy and short.\n",
+    "# single expression, can be multiple parameters.\n",
+    "\n",
+    "lamb = lambda x, y:x+y\n",
+    "new = lamb(8, 9)\n",
+    "print(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d3ceeb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How Many Basic Types Of Functions Are Available In Python?\n",
+    "# there are three basic type of function.\n",
+    "# 1.built-in function :- print(),type(),len(),all(),any(),filter(),eval() and enumerate()\n",
+    "# 2.user define function :- user have difine\n",
+    "# 3.anonymous function :- lambda function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0bbdb45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###  How can you pick a random item from a list or tuple?\n",
+    "import random\n",
+    "list1 = (12,23,54,65,23,54)\n",
+    "random_number = random.randint(0,5)\n",
+    "new = list1[random_number]\n",
+    "print(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15afb926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### How can you pick a random item from a range?\n",
+    "\n",
+    "import random\n",
+    "enter = int(input(\"Enter the any number for range:- \"))\n",
+    "random_number = random.randint(0,enter)\n",
+    "print(random_number)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "305a798b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### How can you get a random number in python?\n",
+    "\n",
+    "# we can get random number from random.random is built in moduel to use for random number\n",
+    "\n",
+    "\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "random_number = random.randint(0,99)\n",
+    "print(random_number)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "600612f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### How will you set the starting value in generating random numbers?\n",
+    "# we will set starting value for genrating random number than we use randint,\n",
+    "# because randint takes to argument start and end.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ba8738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### How will you randomizes the items of a list in place?\n",
+    "import random\n",
+    "list1 = [43,65,2,76,87,22,99]\n",
+    "random_number = random.randrange(99)\n",
+    "# list1.append(random_number)\n",
+    "# print(list1)\n",
+    "list1.insert(0,random_number)\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfc99881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### Write a Python program to read a random line from a file.\n",
+    "import random\n",
+    "\n",
+    "f1 = open(\"rahul_assingment.txt\",\"r\")\n",
+    "f2 = f1.readlines()\n",
+    "lenght = len(f2)\n",
+    "r1 = random.randint(0, lenght -1)\n",
+    "print(f2[r1])\n",
+    "\n",
+    "f1.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff81d4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####  Write a Python program to convert degree to radian\n",
+    "\n",
+    "pi=22/7\n",
+    "radian = float(input(\"Input radians:- \"))\n",
+    "degree = round(radian*(180/pi),2)\n",
+    "print(degree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e3e11f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####  Write a Python program to calculate the area of a trapezoid\n",
+    "\n",
+    "Base1 = float(input('Enter the First Base of a Trapezoid: '))\n",
+    "Base2 = float(input('Enter the Second Base of a Trapezoid: '))\n",
+    "\n",
+    "Height= float(input('Enter the Height of a Trapezoid: '))\n",
+    "\n",
+    "area = 0.5 *(Base1 + Base2) * Height\n",
+    "print(\"The Area of a trapezoid:-\",area)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d1c8fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Write a Python program to calculate the area of a parallelogram\n",
+    "\n",
+    "base = float(input(\"enter the base of parallelogram:- \"))\n",
+    "base1 = float(input(\"enter hieght of parallelogram:- \"))\n",
+    "area = base*base1\n",
+    "print(\"The area of parallelogram is:-\",area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac802d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Write a Python program to calculate surface volume and area of a cylinder\n",
+    "\n",
+    "redius = float(input(\"Ente the rediuse of cylinder:- \"))\n",
+    "height = float(input(\"Ente the height of cylinder:- \"))\n",
+    "pi = 22/7\n",
+    "surface_area = round(2 * pi * pow(redius,2)*height,2)\n",
+    "volume = round(pi* pow(redius,2)*height,2)\n",
+    "print(\"The surface area of cylinder is:-\",surface_area)\n",
+    "print(\"The vollume of cylinder is:-\",volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cb19b67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####   Write a Python program to find the maximum and minimum numbers\n",
+    "# from the specified decimal numbers.\n",
+    "\n",
+    "\n",
+    "list1 = [12,34.4,54,83,87,66.44,69.54,12.33]\n",
+    "list2 = list1.sort()\n",
+    "new_list = list1.copy()\n",
+    "for i in list1:\n",
+    "    if len(str(i))> 2:\n",
+    "        print(f\"The minimum decimal number is:- {i}\")\n",
+    "        break\n",
+    "new_list1 = new_list.reverse()\n",
+    "for j in new_list:\n",
+    "    if len(str(j))> 2:\n",
+    "        print(f\"The maximum decimal number is:- {j}\")\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0373ad",
    "metadata": {},
    "outputs": [],
    "source": []
